# LambOS

./: .clang-format  .gitignore  .kateproject  BSDmakefile  CMakeLists.txt  LICENSE  Makefile  Makefile2  README.md  bochsrc-dbg.bxrc  bochsrc.bxrc  bochsrc.in  linker.ld
cmake/: i586-elf.toolchain.cmake  i686-elf.toolchain.cmake
kernel/: CMakeLists.txt
kernel/include/: Kernel.hpp
kernel/include/arch/i386/: X86Kernel.hpp
kernel/include/arch/i386/cpu/: GlobalDescriptorTable.hpp  InterruptDescriptorTable.hpp  InterruptNumber.hpp  PageFaultPanicISR.hpp  RegisterTable.h  X86.hpp  X86CPU.hpp  X86RealTimeClock.hpp  multiboot.h
kernel/include/arch/i386/device/input/: PS2Keyboard.hpp  PS2KeyboardISR.hpp
kernel/include/arch/i386/device/pit/: PIT.hpp  PITIRQ.hpp  pit_funcs.s
kernel/include/arch/i386/device/storage/: AtaDevice.hpp  AtaDeviceDescriptor.hpp  AtapiCommand.hpp  AtapiDevice.hpp  X86AtaDevice.hpp
kernel/include/arch/i386/mem/: MMU.hpp  Paging.hpp
kernel/include/arch/i386/proc/: X86Process.hpp
kernel/include/arch/i386/sys/: Syscall.hpp  asm.h
kernel/include/cpu/: CPU.hpp  RealTimeClock.hpp
kernel/include/device/: Device.hpp
kernel/include/device/display/: Console.hpp  ConsoleOutputStream.hpp  VGATextConsole.hpp
kernel/include/device/input/: Keyboard.hpp  KeyboardInputStream.hpp  PS2Keyboard.hpp
kernel/include/device/storage/: AtaDevice.hpp  AtaDeviceDescriptor.hpp  AtapiCommand.hpp
kernel/include/fs/: DirectoryEntry.hpp  FileSystem.hpp  Volume.hpp
kernel/include/fs/iso9660/: DataStructures.hpp  DirectoryEntry.hpp  Iso9660.hpp  Volume.hpp
kernel/include/io/: BochsDebugOutputStream.hpp  debug.h
kernel/include/mem/: Address.hpp  AddressSpace.hpp  Heap.hpp  MMU.hpp  PageFrameAllocator.hpp  PageTable.hpp
kernel/include/proc/: Context.hpp  Process.hpp  Scheduler.hpp
kernel/include/proc/elf/: DataStructures.hpp  Executable.hpp
kernel/include/sys/: asm.h  keys.h
kernel/src/: Kernel.cpp
kernel/src/arch/i386/: X86Kernel.cpp  main.cpp
kernel/src/arch/i386/cpu/: GlobalDescriptorTable.cpp  InterruptDescriptorTable.cpp  X86.cpp  X86CPU.cpp  X86RealTimeClock.cpp  boot.s  isr.h
kernel/src/arch/i386/device/display/: VGATextConsole.cpp
kernel/src/arch/i386/device/input/: PS2Keyboard.cpp
kernel/src/arch/i386/device/storage/: AtaDevice.cpp  AtaDeviceDescriptor.cpp  AtapiCommand.cpp  AtapiDevice.cpp  X86AtaDevice.cpp
kernel/src/arch/i386/mem/: MMU.cpp  PageDirectory.cpp  PageFrameAllocator.cpp  PageTable.cpp
kernel/src/arch/i386/proc/: context_switch.s
kernel/src/arch/i386/sys/: Syscall.cpp
kernel/src/device/display/: ConsoleOutputStream.cpp
kernel/src/device/input/: KeyboardInputStream.cpp  PS2Keyboard.cpp
kernel/src/device/storage/: AtaDeviceDescriptor.cpp  AtapiCommand.cpp
kernel/src/fs/iso9660/: DirectoryEntry.cpp  Iso9660.cpp  Volume.cpp
kernel/src/mem/: Heap.cpp  liballoc.c  liballoc_hook.cpp
kernel/src/proc/: Scheduler.cpp
kernel/src/proc/elf/: Executable.cpp
kernel/src/runtime/: cpplang.cpp
kernel/tests/: MMUTests.cpp
kernel/tests/elftest/: CMakeLists.txt  lang_support.cpp  main.cpp  start.c  start.s
libc/: CMakeLists.txt
libc/include/: ctype.h  decl.h  stdio.h  stdlib.h  string.h
libc/include/bits/: string-inl.h
libc/include/sys/: _syscall_macros.h  _syscall_numbers.h  syscall.h
libc/src/: lang_support.cpp  string.c  xtoa.h
libc/src/stdio/: gets.c  printf.c  putchar.cpp
libc/src/stdlib/: exit.c  itoa.c  liballoc.c  liballoc.h  liballoc_hook.cpp
libc/src/string/: memset.cpp  string.c  strtok.c
libc/src/sys/: syscall.cpp  syscall_kernel.cpp
libcpp/: CMakeLists.txt
libcpp/cxxabi/: cpplang.cpp  icxxabi.cpp  icxxabi.hpp
libcpp/include/: algorithm  bit  compare  concepts  cstddef  cstdint  cstdio  cstdlib  cstring  functional  initializer_list  iterator  limits  memory  new  ranges  tuple  type_traits  utility
libcpp/include/bits/: algo_support.hpp  cxxconfig.hpp  forward.hpp  invoke.hpp  limits.hpp  range_access.hpp  to_underlying.hpp  traits.hpp
libcpp/include/bits/functional/: function.hpp  reference_wrapper.hpp
libcpp/include/bits/iterator/: concepts.hpp  reverse_iterator.hpp  types.hpp
libcpp/include/bits/memory/: addressof.hpp  concepts.hpp  construct_at.hpp  destroy.hpp  uninitialized_copy.hpp  uninitialized_default_construct.hpp  uninitialized_fill.hpp  uninitialized_move.hpp  uninitialized_value_construct.hpp
libcpp/include/bits/ranges/: algorithms.hpp  comparisons.hpp  concepts.hpp  identity.hpp  subrange.hpp
libcpp/include/bits/ranges/algorithms/: copy.hpp  fill.hpp  fill_n.hpp  find.hpp  generate_n.hpp
libcpp/src/: new.cpp
libsys/: CMakeLists.txt
libsys/include/: Defines.hpp  Memory.hpp  Object.hpp
libsys/include/fs/: Path.hpp
libsys/include/io/: FileReader.hpp  FilterOutputStream.hpp  Format.hpp  InputStream.hpp  OutputStream.hpp  Print.hpp  PrintStream.hpp  StandardOutput.hpp  StringStream.hpp
libsys/include/math/: Math.hpp  Prefix.hpp
libsys/include/mem/: ArcPtr.hpp  RefCount.hpp  UniquePtr.hpp  Units.hpp
libsys/include/monad/: Maybe.hpp
libsys/include/system/: Debug.hpp
libsys/include/util/: Array.hpp  ArrayList.hpp  BasicString.hpp  BitSet.hpp  Collection.hpp  Comparator.hpp  Compare.hpp  Concepts.hpp  Deque.hpp  DynamicArray.hpp  EqualTo.hpp  Function.hpp  HashMap.hpp  Hasher.hpp  Iterable.hpp  Iterator.hpp  IteratorBase.hpp  LinkedList.hpp  List.hpp  Map.hpp  Maybe.hpp  Pair.hpp  Queue.hpp  RingBuffer.hpp  Stack.hpp  StaticList.hpp  String.hpp  StringTokenizer.hpp  StringView.hpp  TypeTraits.hpp  Void.hpp
libsys/include/util/meta/: Base.hpp  TemplateFor.hpp  TypeManipulation.hpp  Variadic.hpp
libsys/src/fs/: Path.cpp
libsys/src/io/: FileReader.cpp  PrintStream.cpp
libsys/src/util/: StringTokenizer.cpp
programs/: AddLambosExecutable.cmake  lang_support.cpp  link.ld  start.c
runtime/: build-crt  build-crti  build-crtn  crti.s  crtn.s
scripts/: page_fault_report.py
src/: BasicTerminal.cpp  BasicTerminal.h  ITerminal.hpp  Makefile  VGA4BitColor.h  VGATextTerminal.cpp  VGATextTerminal.hpp  kernel.cpp  linker.ld  set_gdt.s
src/lib/: asm.c  (+1 more)
(+139 files in other folders)
