if (NOT DEFINED LIBCPP_TARGET)
    set(LIBCPP_TARGET lambos-libcpp)
    message (WARNING "LIBCPP_TARGET was not set by project root. Defaulting to '${LIBCPP_TARGET}'.")
    set(LIBCPP_TARGET ${LIBCPP_TARGET} PARENT_SCOPE)
endif ()
if (NOT DEFINED LIBKPP_TARGET)
    set(LIBKPP_TARGET lambos-libkpp)
    message (WARNING "LIBKPP_TARGET was not set by project root. Defaulting to '${LIBKPP_TARGET}'.")
    set(LIBKPP_TARGET ${LIBKPP_TARGET} PARENT_SCOPE)
endif ()

set (INCLUDE_FILES
        include/cstring include/cstdio)
set (SOURCES src/new.cpp)

add_library(lambos-cxxabi OBJECT cxxabi/cpplang.cpp cxxabi/icxxabi.cpp)

macro(add_libcpp TARGET_NAME IS_KERNEL)
    add_library(${TARGET_NAME} STATIC ${SOURCES} ${INCLUDE_FILES})
    lambos_add_compile_options(${TARGET_NAME})
    target_include_directories(${TARGET_NAME} PUBLIC include)
    target_include_directories(${TARGET_NAME} PRIVATE $<TARGET_PROPERTY:${KERNEL_TARGET},INTERFACE_INCLUDE_DIRECTORIES>)
    target_compile_features(${TARGET_NAME} PUBLIC ${LAMBOS_CXX_STANDARD_FEATURE})
    target_link_libraries(${TARGET_NAME} PUBLIC lambos-cxxabi)

    if (${IS_KERNEL})
        message("Generating libcpp target '${TARGET_NAME}' for kernel target")
        target_compile_options(${TARGET_NAME} PRIVATE $<$<COMPILE_LANGUAGE:C,CXX>: -DKERNEL>)
        target_include_directories(${TARGET_NAME} PRIVATE $<TARGET_PROPERTY:${KERNEL_TARGET},INTERFACE_INCLUDE_DIRECTORIES>)
        target_link_libraries(${TARGET_NAME} PUBLIC ${LIBK_TARGET})
    else()
        message("Generating libcpp target '${TARGET_NAME}' for non-kernel targets")
        target_link_libraries(${TARGET_NAME} PUBLIC ${LIBC_TARGET})
    endif()
endmacro()

add_libcpp(${LIBCPP_TARGET} NO)
add_libcpp(${LIBKPP_TARGET} YES)
